# BuildEnv

./: .gitignore  README.md
Docker/: versions.md
Docker/Cpp_cmake_ubuntu/: Dockerfile  docker-compose.yml
Docker/python3_10_0/: Dockerfile  docker-compose.yml
Docker/pytorch_version3_07/: docker-compose.yml
DockerEnv/: README.md
DockerEnv/CppCmakeUbuntu/: README.md
DockerEnv/CppSimpleUbuntu/: Dockerfile  REAMDE.md  build_ceres_solver.sh
DockerEnv/pytorch_version01/: docker-compose.yml
DockerEnv/pytorch_version3_07/: Dockerfile
En/: kikutan800.md  ted.md
House_will_be_remove/: memo.csv  memo.txt
Memo/: NvidiaInWSL.md  anaconda.md  cpp_torch.md  handler.md  pyenv.md  scorereproduction.md  speck.md
Src/Cpp_tutorial/: .gitignore
Src/Docker/: README.md  versions.md
Src/Docker/Cpp_tutorial/: REAMDE.md
Src/Docker/camera_parameter/: README.md  inner_parameter.py
Src/Docker/cpp_opencv/camera_parameters/: README.md
Src/Docker/cpp_pcd/: CMakeLists.txt  README.md  tutorial_visualization_voxel.cpp
Src/Docker/cpp_pcd/example/: pcd_write.cpp  tutorial_visualization.cpp  tutorial_visualization_bunny.cpp  tutorial_visualization_normalization.cpp
Src/Docker/cpp_pcd/libs/: common.h
Src/Docker/heat_desease/: README.md  eda.py  make.py
Src/Docker/opencvCpp/: CMakeLists.txt  Lucas_kanade.cpp  README.md  build.sh  kalman_filter.cpp
Src/Docker/opencv_tutorial/: README.md  tutorial1.py
Src/Docker/pybind/: CMakeLists.txt  README.md  main.py  mycat.cpp  mycat.h
Src/Docker/python3_10_0/: README copy.md  README.md  learn.py  load.py  tutorial_torch_custom_vgg16_CIFAR-10.py  tutorial_torch_custom_vgg16_MNIST.py  tutorial_torch_transfer_trainng.py
Src/Docker/python3_10_0/opencvTutorial/: feature_matching.py
Src/Docker/python_yolov/: README.md  prediction_deepsparse.py  prediction_onnx.py  quantization_onnx.py
Src/Docker/pytorch_version01/: Dockerfile
Src/sh/: cuda.sh
